# NexaMap-Editor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
.github/workflows/: clang-format.yml  windows-build.yml
brushes/icon/: editor_icon.xpm
data/: clients.xml  menubar.xml
data/1100/: doodads.xml  grounds.xml  items.xml  tilesets.xml
data/1286/: items.otb  items.xml
data/860/: items.otb
source/: CMakeLists.txt  about_window.cpp  about_window.h  action.cpp  action.h  add_item_window.cpp  add_tileset_window.cpp  application.cpp  application.h  artprovider.cpp  artprovider.h  basemap.cpp  basemap.h  bitmap_font.cpp  bitmap_font.h  border_workspace_window.cpp  border_workspace_window.h  browse_tile_window.cpp  browse_tile_window.h  brush.cpp  brush.h  carpet_brush.cpp  carpet_brush.h  client_version.cpp  client_version.h  common.cpp  common.h  common_windows.cpp  common_windows.h  complexitem.cpp  complexitem.h  con_vector.h  container_properties_window.cpp  container_properties_window.h  copybuffer.cpp  creature.cpp  creature.h  creature_brush.h  creatures.cpp  creatures.h  (+186 more)
tests/: depot_conversion_validation_tests.cpp  item_id_mapping_tests.cpp  procedural_map_generator_tests.cpp  spawn_format_tests.cpp  spawn_xml_converter_manual_tests.md  spawn_xml_converter_tests.cpp
vcproj/Project/: Editor.rc  Editor.vcxproj  Editor.vcxproj.filters
